# Research-Pulse_energy_access

./: .env.example  .gitignore  LICENSE  MANIFEST.in  PUBLISHING.md  README.md  pyproject.toml  requirements.txt  rp.bat
.github/workflows/: daily.yml  publish-pypi.yml
apps_script/: Code.gs
config/: core_venues.yaml  settings.yaml  subscribers.sample.csv  topics.yaml
data/: seen.json
docs/: index.html
research_agent/: __init__.py  __main__.py  agent.py  bm25.py  cache.py  chat.py  cli.py  compare.py  config.py  critique.py  features.py  insights.py  local_config.py  log.py  mailer.py  memory.py  models.py  pipeline.py  rank.py  recommend.py  render.py  search.py  setup.py  subscribers.py  summarize.py  ui.py  venues.py  web.py  zotero.py
research_agent/bundled/: __init__.py
research_agent/bundled/templates/: email.html.j2
research_agent/sources/: __init__.py  arxiv.py  biorxiv.py  crossref.py  europepmc.py  http.py  openalex.py  rss.py  semanticscholar.py
scripts/: publish.ps1  sync_bundled.py
templates/: agent.html  email.html.j2
